--- a/css/style.css
+++ b/css/style.css
@@ -302,7 +302,6 @@ body {
 .landing-page {
   position: relative;
   margin-top: -80px;
-  min-height: 100vh;
   background-image: url(../assets/imgs/bg.jpg);
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -322,13 +321,14 @@ body {
   position: relative;
   z-index: 2;
   padding-top: 80px;
-  min-height: 100vh;
 }
 .landing-page .container .main-content {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  min-height: 100vh;
+}
+.landing-page .container .main-content .left-sec {
+  padding-bottom: 2rem;
 }
 .landing-page .container .main-content .left-sec .main-tittle {
   margin-top: 5rem;
@@ -386,6 +386,7 @@ body {
   overflow: hidden;
 }
 .landing-page .container .main-content .right-sec .img-holder {
+  padding-top: 1rem;
   width: 100%;
   height: 100%;
   overflow: hidden;
@@ -2270,4 +2271,3 @@ body {
         flex-basis: 100%;
   }
 }
-/*# sourceMappingURL=style.css.map */
