--- a/sass/style.scss
+++ b/sass/style.scss
@@ -281,7 +281,6 @@ $sub-color-darker: #919191;
 .landing-page{
   position: relative;
   margin-top: -80px;
-  min-height: 100vh;
   background-image: url(../assets/imgs/bg.jpg);
   background-attachment: fixed;
   background-repeat: no-repeat;
@@ -299,11 +298,10 @@ $sub-color-darker: #919191;
     position: relative;
     z-index: 2;
     padding-top: 80px;
-    min-height: 100vh;
     .main-content{
       display: flex;
-      min-height: 100vh;
       .left-sec{
+        padding-bottom: 2rem;
         .main-tittle{
           margin-top: 5rem;
         }
@@ -341,6 +339,7 @@ $sub-color-darker: #919191;
       .right-sec{
         overflow: hidden;
         .img-holder{
+          padding-top: 1rem;
           width: 100%;
           height: 100%;
           overflow: hidden;
